traefik/ingressroutes/traefik-dashboard.yaml
---
# Traefik Dashboard IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
  labels:
    app: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.authoritah.com`)
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: authelia-forwardauth
  tls:
    secretName: traefik-dashboard-tls
